tests/fixtures/guardrails/invalid/route-reassigned-imports-domain/app/routes/products.ts
let target;
target = "~/domain/billing/entitlement-state.mjs";

export async function action() {
  return import(target);
}
